apps/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    gateway-access: prometheus
