apps/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
