apps/prometheus/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: prometheus
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway 
      sectionName: prometheus-https
  hostnames:
    - "prometheus.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: prometheus
          port: 9090
